--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" aria-current="page" href="cert.html">Certificate</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Resume</a>
+                <a class="nav-link" href="https://drive.google.com/file/d/1JqKahpH5Ajsf67G0jFUxPlXSRYlIYccC/view?usp=sharing">Resume</a>
               </li>
         </ul>
       </div>
