--- a/cert.html
+++ b/cert.html
@@ -27,14 +27,15 @@
             <a class="nav-link" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="about.html">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="cert.html">Certificate</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link">Resume</a>
-          </li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://drive.google.com/file/d/1JqKahpH5Ajsf67G0jFUxPlXSRYlIYccC/view?usp=sharing">Resume</a>
+        </li>
         </ul>
       </div>
     </div>
