--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Me</a>
+                <a class="nav-link" href="about.html">About Me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="cert.html">Certificate</a>
@@ -168,7 +168,7 @@ h1{
     <div class="container-fluid" style="background-color:#1c1819">
         <h1>Suwijak Srikhao<p class="fs-5">This website is portfolio</p>
         <a type="submit" href="cert.html" class="btn btn-outline-light"><i class="bi bi-file-earmark-check-fill"></i>&nbsp;Certificate</a>
-    
+        <a type="submit" href="about.html" class="btn btn-outline-light"><i class="bi bi-file-earmark-person"></i>&nbsp;About Me</a>
         </h1>
     </div>
 
