--- a/index.html
+++ b/index.html
@@ -62,6 +62,24 @@
         <p class="fs-4">มกราคม 2561 - ปัจจุบัน</p>
         <hr style="color:white">
 
+                  <ul class="cards">
+                    <li>
+                      <a href="" class="card">
+                        <img src="image/12.png" class="card__image" alt="" />
+                        <div class="card__overlay">
+                          <div class="card__header">
+                            <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
+                            <div class="card__header-text">
+                              <h3 class="card__title">WEBSITE | QRCODE DURIAN</h3>            
+                              <span class="card__status">co-buy | 2565</span>
+                            </div>
+                          </div>
+                          <p class="card__description">โปรเจคนี้เป็นโปรเจคจบนักศึกษาปริญญาโทอุตสาหกรรม วัตถุประสงค์เพื่อให้ลูกค้าที่ซื้อทุเรียนสามารถติดตามได้ว่ามาจากสวนไหนผ่านการสแกนคิวอาร์โค้ด และพ่อค้ายังสามารถตรวจสอบรอบของสินค้าและวันผลิตได้</p>
+                        </div>
+                      </a>      
+                    </li>
+                    </ul>
+
                     <ul class="cards">
                         <li>
                           <a href="" class="card">
