--- a/cert.html
+++ b/cert.html
@@ -37,7 +37,7 @@
           </li>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://drive.google.com/file/d/1JqKahpH5Ajsf67G0jFUxPlXSRYlIYccC/view?usp=sharing">Resume</a>
+          <a class="nav-link" href="https://www.canva.com/design/DAE4tGdtvhk/n1-lz5TbzNKIbZFz07VljQ/view?utm_content=DAE4tGdtvhk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Resume</a>
         </li>
         </ul>
       </div>
