--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" aria-current="page" href="cert.html">Certificate</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://drive.google.com/file/d/1JqKahpH5Ajsf67G0jFUxPlXSRYlIYccC/view?usp=sharing">Resume</a>
+                <a class="nav-link" href="https://www.canva.com/design/DAE4tGdtvhk/n1-lz5TbzNKIbZFz07VljQ/view?utm_content=DAE4tGdtvhk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Resume</a>
               </li>
         </ul>
       </div>
